fix icon alignment

--- a/client/styles/_function.scss
+++ b/client/styles/_function.scss
@@ -110,6 +110,7 @@
       color: $grey1;
       font-size: 12px;
       cursor: ns-resize;
+      margin-right: 6px;
     }
   }
 
